manuscripts/elife-67605/v1/manuscript_v1.md
# The cooperative binding of TDP-43 to GU-rich RNA repeats antagonizes TDP-43 aggregation

## Authors

- Juan Carlos Rengifo-Gonzalez<sup>1</sup>
- Krystel El Hage<sup>2</sup>
- Marie-Jeanne Clément<sup>1</sup>
- Emilie Steiner<sup>3</sup>
- Vandana Joshi<sup>4</sup>
- Pierrick Craveur<sup>5</sup>
- Dominique Durand<sup>6</sup> ([ORCID: 0000-0001-9414-5857](https://orcid.org/0000-0001-9414-5857))
- David Pastré<sup>1</sup> †
- Ahmed Bouhss<sup>7</sup> ([ORCID: 0000-0002-6492-1429](https://orcid.org/0000-0002-6492-1429)) †

### Affiliations

1. SABNP Université Evry-val-d'Essonne Evry France
2. SABNP Genopole Evry France
3. laboratoire structure activité des biomolécules normales et pathologiques université Evry Evry France
4. laboratoire structure activité des biomolécules normales et pathologiques INSERM Evry France
5. SABNP Synsight company Evry France
6. UMR 9198 Institut de Biologie Intégrative de la Cellule ORSAY France
7. 91 CNRS Evry France

† Corresponding author

## Abstract

TDP-43 is a nuclear RNA-binding protein that forms neuronal cytoplasmic inclusions in two major neurodegenerative diseases, ALS and FTLD. While the self-assembly of TDP-43 by its structured N-terminal and intrinsically disordered C-terminal domains has been widely studied, the mechanism by which mRNA preserves TDP-43 solubility in the nucleus has not been addressed. Here, we demonstrate that tandem RNA Recognition Motifs of TDP-43 bind to long GU-repeats in a cooperative manner through intermolecular interactions. Moreover, using mutants whose cooperativity is impaired, we found that the cooperative binding of TDP-43 to mRNA may be critical to maintain the solubility of TDP-43 in the nucleus and the miscibility of TDP-43 in cytoplasmic stress granules. We anticipate that the knowledge of a higher order assembly of TDP-43 on mRNA may clarify its role in intron processing and provide a means of interfering with the cytoplasmic aggregation of TDP-43.
