manuscripts/elife-67605/v2/manuscript_v1.md
# The cooperative binding of TDP-43 to GU-rich RNA repeats antagonizes TDP-43 aggregation

## Authors

- Juan Carlos Rengifo-Gonzalez<sup>1</sup>
- Krystel El Hage<sup>2</sup> ([ORCID: 0000-0003-4837-3888](https://orcid.org/0000-0003-4837-3888))
- Marie-Jeanne Clément<sup>1</sup>
- Emilie Steiner<sup>3</sup>
- Vandana Joshi<sup>3</sup>
- Pierrick Craveur<sup>4</sup> ([ORCID: 0000-0001-9274-4944](https://orcid.org/0000-0001-9274-4944))
- Dominique Durand<sup>5</sup> ([ORCID: 0000-0001-9414-5857](https://orcid.org/0000-0001-9414-5857))
- David Pastré<sup>1</sup> †
- Ahmed Bouhss<sup>6</sup> ([ORCID: 0000-0002-6492-1429](https://orcid.org/0000-0002-6492-1429)) †

### Affiliations

1. SABNP Université Paris-Saclay, INSERM U1204, Univ Evry Evry France
2. Department of Chemistry Université Paris-Saclay, INSERM U1204, Univ Evry Evry France
3. laboratoire structure activité des biomolécules normales et pathologiques Université Paris-Saclay, INSERM U1204, Univ Evry Evry France
4. SYNSIGHT Evry France
5. Institute for Integrative Biology of the Cell (I2BC) Université Paris-Saclay, CEA, CNRS Gif-sur-Yvette France
6. Structure-Activité des Biomolécules Normales et Pathologiques (SABNP) Université Paris-Saclay, INSERM U1204, Univ Evry Evry France

† Corresponding author

## Abstract

TDP-43 is a nuclear RNA-binding protein that forms neuronal cytoplasmic inclusions in two major neurodegenerative diseases, ALS and FTLD. While the self-assembly of TDP-43 by its structured N-terminal and intrinsically disordered C-terminal domains has been widely studied, the mechanism by which mRNA preserves TDP-43 solubility in the nucleus has not been addressed. Here, we demonstrate that tandem RNA Recognition Motifs of TDP-43 bind to long GU-repeats in a cooperative manner through intermolecular interactions. Moreover, using mutants whose cooperativity is impaired, we found that the cooperative binding of TDP-43 to mRNA may be critical to maintain the solubility of TDP-43 in the nucleus and the miscibility of TDP-43 in cytoplasmic stress granules. We anticipate that the knowledge of a higher order assembly of TDP-43 on mRNA may clarify its role in intron processing and provide a means of interfering with the cytoplasmic aggregation of TDP-43.
